force-app/main/default/objects/Battery__c/Battery__c.object-meta.xml
<CustomObject>
    <label>Battery</label>
    <nameField>
        <displayFormat>BAT-{0000}</displayFormat>
        <label>Battery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batteries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>