force-app/main/default/objects/Battery__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <description>Production batch</description>
    <label>Batch Number</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>