force-app/main/default/objects/Battery__c/fields/Battery_Model__c.field-meta.xml
<CustomField>
    <fullName>Battery_Model__c</fullName>
    <description>Product model</description>
    <label>Battery Model</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>