force-app/main/default/objects/Battery__c/fields/Battery_PIN__c.field-meta.xml
<CustomField>
    <fullName>Battery_PIN__c</fullName>
    <description>Unique Battery ID</description>
    <label>Battery PIN</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>