force-app/main/default/objects/Battery__c/fields/Created_from_API__c.field-meta.xml
<CustomField>
    <fullName>Created_from_API__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies whether the Battery record originated from the manufacturer API</description>
    <label>Created from API</label>
    <type>Checkbox</type>
</CustomField>