force-app/main/default/objects/Battery__c/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Location</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Batteries</relationshipLabel>
    <relationshipName>Batteries</relationshipName>
    <type>Lookup</type>
</CustomField>