force-app/main/default/objects/Battery__c/fields/FIFO_Eligible__c.field-meta.xml
<CustomField>
    <fullName>FIFO_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FIFO Eligible</label>
    <type>Checkbox</type>
</CustomField>