force-app/main/default/objects/Battery__c/fields/Last_Movement_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Movement_Date_Time__c</fullName>
    <label>Last Movement Date Time</label>
    <type>DateTime</type>
</CustomField>