force-app/main/default/objects/Battery__c/fields/Manufacturing_Date__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Date__c</fullName>
    <description>Production date</description>
    <label>Manufacturing Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>