force-app/main/default/objects/Battery__c/fields/Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code__c</fullName>
    <description>Production plant</description>
    <label>Plant Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>