force-app/main/default/objects/Battery__c/fields/Production_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Production_Request_ID__c</fullName>
    <description>Production request identifier used to track the integration request</description>
    <label>Production Request ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>