force-app/main/default/objects/Battery__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <description>Encoded QR information</description>
    <label>QR Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>