force-app/main/default/objects/Battery__c/fields/QR_Code_Image__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Image__c</fullName>
    <formula>IMAGE(&quot;https://quickchart.io/qr?text=&quot; &amp; QR_Code__c &amp; &quot;&amp;size=200&quot;, &quot;Battery QR Code&quot;, 200, 200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code Image</label>
    <type>Text</type>
</CustomField>