force-app/main/default/objects/Battery__c/validationRules/Invalid_QR_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_QR_Code</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX(QR_Code__c,&quot;BAT-[A-Z0-9-]+$&quot;))</errorConditionFormula>
    <errorDisplayField>QR_Code__c</errorDisplayField>
    <errorMessage>Invalid QR Code format. Please enter a valid QR Code.</errorMessage>
</ValidationRule>