force-app/main/default/objects/Battery__c/validationRules/Manufacturing_Date_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Manufacturing_Date_Cannot_Be_Future</fullName>
    <active>true</active>
    <description>Manufacturing Date cannot be in the future.</description>
    <errorConditionFormula>Manufacturing_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Manufacturing_Date__c</errorDisplayField>
    <errorMessage>Manufacturing Date cannot be in the future.</errorMessage>
</ValidationRule>